--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                             </a>
                                         </p>
                                         <p class="mb-0">
-                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important">
+                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important" href="https://adityagaikwads.pythonanywhere.com/">
                                                 <i style="color:black !important" class="fas fa-globe"></i> Live
                                             </a>
                                         </p>
