--- a/index.html
+++ b/index.html
@@ -261,6 +261,56 @@
         <br>
         <h2 class="portfolio-heading">Projects 👨‍💻</h2>
         <div class="container">
+            
+            <div class="portfolio-project-card card mb-3" style="max-width: 100%;">
+                <div class="row g-0">
+                    <div class="col-md-3 center">
+                        <img src="assets/images/online.png" class="portfolio-project-img img-fluid rounded-start"
+                            alt="...">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="card-body">
+                            <h4 class="card-title"><strong>Online Examination System</strong></h4>
+                            <h6 class="card-subtitle my-2">Developed a fully functional Online Examination System for educational institutions.
+                            </h6>
+                            
+                            <h4>Features:</h4>
+                            <p class="card-text">
+                            <ul style="list-style-type: none;">
+                                <li><i class="fa-solid fa-square-check"></i> Implemented secure user authentication for students, teachers, and admins.</li>
+                                <li><i class="fa-solid fa-square-check"></i> Enabled exam management with MCQ-based question sets for students to take exams.</li>
+                                <li><i class="fa-solid fa-square-check"></i> Built teacher panel to manage courses, add/edit question sets, and view student performance.</li>
+                                <li><i class="fa-solid fa-square-check"></i> Developed admin panel with full control to approve teacher accounts, manage salaries, and oversee the entire examination process.<li>
+                                <li><i class="fa-solid fa-square-check"></i> Integrated automated exam grading with results displayed upon exam completion.<li>
+                                <li><i class="fa-solid fa-square-check"></i> Designed a responsive user interface for seamless navigation across all user roles.<li>
+                                <li><i class="fa-solid fa-square-check"></i> <strong>Technologies</strong>: Python, Django, HTML, CSS, Bootstrap, SQLite.</li>
+                            </ul>
+                            </p>
+
+                            <div class="container mt-4">
+                                <div class="row justify-content-end">
+                                    <div class="col-auto d-flex align-items-center">
+                                        <p class="mb-0">
+                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important; margin-right: 20px;" href="https://github.com/aditya-1123/Full-Fledged-Online-Examination-System">
+                                                <i style="color:black !important" class="fab fa-github"></i> View on GitHub
+                                            </a>
+                                        </p>
+                                        <p class="mb-0">
+                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important" href="https://adityagaikwad3211.pythonanywhere.com/">
+                                                <i style="color:black !important" class="fas fa-globe"></i> Live
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
 
             <div class="portfolio-project-card card mb-3" style="max-width: 100%;">
                 <div class="row g-0">
@@ -291,7 +341,7 @@
                                 <div class="row justify-content-end">
                                     <div class="col-auto d-flex align-items-center">
                                         <p class="mb-0">
-                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important; margin-right: 20px;" href="https://github.com/aditya-1123/House_price_prediction_model">
+                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important; margin-right: 20px;" href="https://github.com/aditya-1123/Pune-s-house-price-prediction">
                                                 <i style="color:black !important" class="fab fa-github"></i> View on GitHub
                                             </a>
                                         </p>
@@ -428,7 +478,7 @@
                                             </a>
                                         </p>
                                         <p class="mb-0">
-                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important">
+                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important" href="https://adityagaikwads.pythonanywhere.com/">
                                                 <i style="color:black !important" class="fas fa-globe"></i> Live
                                             </a>
                                         </p>
@@ -520,6 +570,10 @@
         <div class="container">
             <div id="playlist-container">
 
+                <iframe src="https://drive.google.com/file/d/1Wr4W3BP7tAy43tw3eNHFiaLgpFMtqBaD/preview" width="320" height="280" allow="autoplay"></iframe> 
+
+                <iframe src="https://drive.google.com/file/d/19KovmIbflPGeN-OR-Wwrkgbjf1csCPFA/preview" width="320" height="280" allow="autoplay"></iframe>
+
                 <iframe src="https://drive.google.com/file/d/1Tndvy01w-UURcK6TTCiPjqatV-4Lksym/preview" width="320" height="280" allow="autoplay"></iframe>
 
                 <iframe src="https://drive.google.com/file/d/1OMn2s5oWD4anen1rHzLCR6nQy39eXmgq/preview" width="320" height="280" allow="autoplay"></iframe>
@@ -531,6 +585,10 @@
                 <iframe src="https://drive.google.com/file/d/1xhmPgdMqFIR5yBSu1oPPH6pF4zdbJToo/preview" width="320" height="280" allow="autoplay"></iframe>
 
                 <iframe src="https://drive.google.com/file/d/14eOpgS07VYuCcXnKQCSnSVBB9mnukPrQ/preview" width="320" height="280" allow="autoplay"></iframe>
+
+                <iframe src="https://drive.google.com/file/d/1PCkSY_Il6F51g_M3aOQ6qckjSRTzJvvJ/preview" width="320" height="280" allow="autoplay"></iframe>
+
+                <iframe src="https://drive.google.com/file/d/1GKEubLCPgQzZbkTqqlWI7LY1roL0g2aW/preview" width="320" height="280" allow="autoplay"></iframe>
 
                 <iframe src="https://drive.google.com/file/d/1gVp4Zh13il8HT41dMBZikeZ5pHoWKiKl/preview" width="320" height="280" allow="autoplay"></iframe>
 
