--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                                             </a>
                                         </p>
                                         <p class="mb-0">
-                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important">
+                                            <a target="_blank" class="btn btn-outline-danger" style="color:black !important" href="https://nodejs-notes-app-gde9.onrender.com/">
                                                 <i style="color:black !important" class="fas fa-globe"></i> Live
                                             </a>
                                         </p>
@@ -613,6 +613,13 @@
         <br>
         <br>
     </div>
+
+
+    <!-- My Resume -->
+    <section class="text-center my-5">
+        <h2 class="portfolio-heading">My Resume 📄</h2>
+        <a href="assets/images/Aditya_Gaikwad.pdf" download="Aditya_Gaikwad.pdf" class="btn btn-dark btn-lg active" style="background-color: white;" role="button" aria-pressed="true" >Download <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1" viewBox="0 0 48 48" enable-background="new 0 0 48 48" height="0.8em" width="0.8em" xmlns="http://www.w3.org/2000/svg" style="margin-left: 0em; font-size: 2.5em; cursor: pointer;"><g fill="#1565C0"><polygon points="24,37.1 13,24 35,24"></polygon><rect x="20" y="4" width="8" height="4"></rect><rect x="20" y="10" width="8" height="4"></rect><rect x="20" y="16" width="8" height="11"></rect><rect x="6" y="40" width="36" height="4"></rect></g></svg></a>
+    </section>    
 
     <!-- Footer -->
     <footer class="footer-section">
