success message background change

--- a/index.html
+++ b/index.html
@@ -601,6 +601,8 @@
         <br>
         <br>
 
+        <br>
+        <br>
         <h2 class="portfolio-heading">Achievements 🏆</h2>
         <div id="portfolio-achievements" class="container">
             <b>
@@ -618,6 +620,8 @@
 
     <!-- My Resume -->
     <div id="portfolio-resume" class="container">
+        <br>
+        <br>
         <h2 class="portfolio-heading">My Resume 📄</h2>
         <section class="text-center my-5">
             <a href="assets/images/Aditya_Gaikwad.pdf" download="Aditya_Gaikwad.pdf" class="btn btn-dark btn-lg active" style="background-color: white;" role="button" aria-pressed="true" >Download <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1" viewBox="0 0 48 48" enable-background="new 0 0 48 48" height="0.8em" width="0.8em" xmlns="http://www.w3.org/2000/svg" style="margin-left: 0em; font-size: 2.5em; cursor: pointer;"><g fill="#1565C0"><polygon points="24,37.1 13,24 35,24"></polygon><rect x="20" y="4" width="8" height="4"></rect><rect x="20" y="10" width="8" height="4"></rect><rect x="20" y="16" width="8" height="11"></rect><rect x="6" y="40" width="36" height="4"></rect></g></svg></a>
@@ -627,7 +631,9 @@
     <!-- Contact us -->    
     <section id="contact">
         <div class="container">
-            <h2 class="portfolio-heading">Contact With Me</h2>
+            <br>
+            <br>
+            <h2 class="portfolio-heading">Contact With Me <img src="assets/images/contact2.png" alt=""></h2>
             <form id="contact-form" onsubmit="return validateForm(event)">
                 <div class="form-group">
                     <label for="name" class="col-form-label text-left" style="display: block; text-align: left;">YOUR NAME</label>
@@ -646,9 +652,11 @@
                     <textarea id="message" name="message" rows="5" class="form-control" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-outline-secondary mb-3" style="border-radius: 5px;">SEND MESSAGE</button>
-                <p id="status"></p>
+                <div class="success-message"></div>
             </form>
         </div>
+        <br>
+        <br>
     </section> 
 
     <!-- Footer -->
