updated file paths

--- a/index.html
+++ b/index.html
@@ -541,12 +541,10 @@
         <div class="container">
             <span class="portfolio-skill-badge badge bg-light text-dark">Django</span>
             <span class="portfolio-skill-badge badge bg-light text-dark">NodeJS</span>
+            <span class="portfolio-skill-badge badge bg-light text-dark">ExpressJs</span>
             <span class="portfolio-skill-badge badge bg-light text-dark">MySQL</span>
             <span class="portfolio-skill-badge badge bg-light text-dark">MongoDB</span>
-            <span class="portfolio-skill-badge badge bg-light text-dark">Bootstrap</span>
-            <span class="portfolio-skill-badge badge bg-light text-dark">Pandas</span>
-            <span class="portfolio-skill-badge badge bg-light text-dark">Numpy</span>
-            <span class="portfolio-skill-badge badge bg-light text-dark">Matplotlib</span> <br>
+            <span class="portfolio-skill-badge badge bg-light text-dark">Bootstrap</span> <br>
             <span class="portfolio-skill-badge badge bg-light text-dark">Git and GitHub</span>
             <span class="portfolio-skill-badge badge bg-light text-dark">Postman</span>
             <span class="portfolio-skill-badge badge bg-light text-dark">VS Code</span>
